--- a/notebooks/Article Collection.ipynb
+++ b/notebooks/Article Collection.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,23 +27,23 @@
     "vbm_query = \"(mailin or ballot or votebymail)\"\n",
     "\n",
     "def fetch_articles(querystring):\n",
-    "  query = {\"sort_by\":\"relevant\",\"use_lucene_syntax\":\"true\",\"query\":querystring}\n",
-    "  response = requests.request(\"GET\", url, headers=headers, params=query)\n",
-    "  return json.loads(response.text)\n",
+    "    query = {\"sort_by\":\"relevant\",\"use_lucene_syntax\":\"true\",\"query\":querystring}\n",
+    "    response = requests.request(\"GET\", url, headers=headers, params=query)\n",
+    "    return json.loads(response.text)\n",
     "\n",
     "# print(fetch_articles(vbm_query)['articles'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from datetime import date\n",
     "from dateutil.relativedelta import relativedelta\n",
     "\n",
-    "def collect_artcicles_over_time(base_query, start_yr=2016, end_yr=2020, step=10):\n",
+    "def collect_artcicles_over_time(base_query, start_yr=2016, end_yr=2020, step=7):\n",
     "    articles = []\n",
     "    start = date(start_yr, 1, 1)\n",
     "    while start.year < end_yr + 1:\n",
@@ -57,13 +57,13 @@
     "        start = end + relativedelta(days=+1)\n",
     "    return articles\n",
     "\n",
-    "articles_18 = collect_artcicles_over_time(vbm_query, start_yr=2018, end_yr=2018)\n",
+    "# articles_18 = collect_artcicles_over_time(vbm_query, start_yr=2018, end_yr=2018)\n",
     "articles_20 = collect_artcicles_over_time(vbm_query, start_yr=2020, end_yr=2020)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -72,13 +72,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "num articles 3609\n",
-      "num unique ids 3239\n"
+      "num articles 3866\n",
+      "num unique ids 3866\n"
      ]
     }
    ],
    "source": [
-    "raw_articles = articles_18 + articles_20\n",
+    "# raw_articles = articles_18 + articles_20\n",
+    "raw_articles = articles_20\n",
     "print(\"num articles\", len(raw_articles))\n",
     "ids = set(map(lambda x: x[\"id\"], raw_articles))\n",
     "print(\"num unique ids\", len(set(ids)))"
@@ -93,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +105,7 @@
     "        self.id = article_dict['id']\n",
     "        self.title = article_dict['title'].replace(\",\", \"\")\n",
     "        self.date_published = article_dict['date_published']\n",
-    "        self.url = article_dict['canonical_url']\n",
+    "        self.url = article_dict['canonical_url'].split(\",\")[0]\n",
     "        self.domain = article_dict['domain']\n",
     "        self.num_tweets = article_dict['number_of_tweets']\n",
     "        self.score = article_dict['score']\n",
@@ -125,11 +126,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "article_data_path = \"../data/all_articles.csv\"\n",
+    "article_data_path = \"../data/2020_articles.csv\"\n",
     "\n",
     "with open(article_data_path, \"w\") as f:\n",
     "    Article.write_csv_col_names(f)\n",
@@ -139,10 +140,247 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3868, 8)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>date_published</th>\n",
+       "      <th>url</th>\n",
+       "      <th>domain</th>\n",
+       "      <th>num_tweets</th>\n",
+       "      <th>score</th>\n",
+       "      <th>site_type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1553916</td>\n",
+       "      <td>Michael Moore Sends Iran Leader a Direct Messa...</td>\n",
+       "      <td>2020-01-05T19:02:35.000Z</td>\n",
+       "      <td>https://www.breitbart.com/entertainment/2020/0...</td>\n",
+       "      <td>breitbart.com</td>\n",
+       "      <td>646.0</td>\n",
+       "      <td>6.2215809822</td>\n",
+       "      <td>claim</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1555516</td>\n",
+       "      <td>Michael Moore in Farsi Apologizes to Iran for ...</td>\n",
+       "      <td>2020-01-07T15:23:14.000Z</td>\n",
+       "      <td>https://www.breitbart.com/entertainment/2020/0...</td>\n",
+       "      <td>breitbart.com</td>\n",
+       "      <td>468.0</td>\n",
+       "      <td>5.9677276611</td>\n",
+       "      <td>claim</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1550356</td>\n",
+       "      <td>Pollak: Welcome to 2020 the Year of the Good F...</td>\n",
+       "      <td>2020-01-01T04:35:24.000Z</td>\n",
+       "      <td>https://www.breitbart.com/politics/2019/12/31/...</td>\n",
+       "      <td>breitbart.com</td>\n",
+       "      <td>256.0</td>\n",
+       "      <td>6.6697311401</td>\n",
+       "      <td>claim</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1551525</td>\n",
+       "      <td>Watchdog to counties: Clean up voter registrat...</td>\n",
+       "      <td>2020-01-03T01:20:23.000Z</td>\n",
+       "      <td>https://www.wnd.com/2020/01/watchdog-counties-...</td>\n",
+       "      <td>wnd.com</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>6.0907196999</td>\n",
+       "      <td>claim</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1551404</td>\n",
+       "      <td>Trump Posts Eye-Popping Fundraising Total for Q4</td>\n",
+       "      <td>2020-01-02T05:00:00.000Z</td>\n",
+       "      <td>https://www.redstate.com/bonchie/2020/01/02/tr...</td>\n",
+       "      <td>redstate.com</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>6.6697311401</td>\n",
+       "      <td>claim</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3863</th>\n",
+       "      <td>2211716</td>\n",
+       "      <td>Sidney Powell Files Lawsuits Challenging Elect...</td>\n",
+       "      <td>2020-11-26T20:00:21.000Z</td>\n",
+       "      <td>http://redstatewatcher.com/aggregate.asp?id=17...</td>\n",
+       "      <td>redstatewatcher.com</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>9.1030197144</td>\n",
+       "      <td>claim</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3864</th>\n",
+       "      <td>2210303</td>\n",
+       "      <td>Dan Bongino hints at potential run for preside...</td>\n",
+       "      <td>2020-11-24T23:00:17.000Z</td>\n",
+       "      <td>http://redstatewatcher.com/aggregate.asp?id=17...</td>\n",
+       "      <td>redstatewatcher.com</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.439699173</td>\n",
+       "      <td>claim</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3865</th>\n",
+       "      <td>2211401</td>\n",
+       "      <td>Pennsylvania judge orders HALT to certifying e...</td>\n",
+       "      <td>2020-11-26T08:00:19.000Z</td>\n",
+       "      <td>http://redstatewatcher.com/aggregate.asp?id=17...</td>\n",
+       "      <td>redstatewatcher.com</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.8410634995</td>\n",
+       "      <td>claim</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3866</th>\n",
+       "      <td>2210878</td>\n",
+       "      <td>Huge court win lets Trump present ballot evide...</td>\n",
+       "      <td>2020-11-25T18:00:18.000Z</td>\n",
+       "      <td>http://redstatewatcher.com/aggregate.asp?id=17...</td>\n",
+       "      <td>redstatewatcher.com</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>50.4958114624</td>\n",
+       "      <td>claim</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3867</th>\n",
+       "      <td>2212588</td>\n",
+       "      <td>Chris Hayes haunted by 2016 'fun fact' when MS...</td>\n",
+       "      <td>2020-11-28T04:00:23.000Z</td>\n",
+       "      <td>http://redstatewatcher.com/aggregate.asp?id=17...</td>\n",
+       "      <td>redstatewatcher.com</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.8410634995</td>\n",
+       "      <td>claim</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3868 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           id                                              title  \\\n",
+       "0     1553916  Michael Moore Sends Iran Leader a Direct Messa...   \n",
+       "1     1555516  Michael Moore in Farsi Apologizes to Iran for ...   \n",
+       "2     1550356  Pollak: Welcome to 2020 the Year of the Good F...   \n",
+       "3     1551525  Watchdog to counties: Clean up voter registrat...   \n",
+       "4     1551404   Trump Posts Eye-Popping Fundraising Total for Q4   \n",
+       "...       ...                                                ...   \n",
+       "3863  2211716  Sidney Powell Files Lawsuits Challenging Elect...   \n",
+       "3864  2210303  Dan Bongino hints at potential run for preside...   \n",
+       "3865  2211401  Pennsylvania judge orders HALT to certifying e...   \n",
+       "3866  2210878  Huge court win lets Trump present ballot evide...   \n",
+       "3867  2212588  Chris Hayes haunted by 2016 'fun fact' when MS...   \n",
+       "\n",
+       "                date_published  \\\n",
+       "0     2020-01-05T19:02:35.000Z   \n",
+       "1     2020-01-07T15:23:14.000Z   \n",
+       "2     2020-01-01T04:35:24.000Z   \n",
+       "3     2020-01-03T01:20:23.000Z   \n",
+       "4     2020-01-02T05:00:00.000Z   \n",
+       "...                        ...   \n",
+       "3863  2020-11-26T20:00:21.000Z   \n",
+       "3864  2020-11-24T23:00:17.000Z   \n",
+       "3865  2020-11-26T08:00:19.000Z   \n",
+       "3866  2020-11-25T18:00:18.000Z   \n",
+       "3867  2020-11-28T04:00:23.000Z   \n",
+       "\n",
+       "                                                    url               domain  \\\n",
+       "0     https://www.breitbart.com/entertainment/2020/0...        breitbart.com   \n",
+       "1     https://www.breitbart.com/entertainment/2020/0...        breitbart.com   \n",
+       "2     https://www.breitbart.com/politics/2019/12/31/...        breitbart.com   \n",
+       "3     https://www.wnd.com/2020/01/watchdog-counties-...              wnd.com   \n",
+       "4     https://www.redstate.com/bonchie/2020/01/02/tr...         redstate.com   \n",
+       "...                                                 ...                  ...   \n",
+       "3863  http://redstatewatcher.com/aggregate.asp?id=17...  redstatewatcher.com   \n",
+       "3864  http://redstatewatcher.com/aggregate.asp?id=17...  redstatewatcher.com   \n",
+       "3865  http://redstatewatcher.com/aggregate.asp?id=17...  redstatewatcher.com   \n",
+       "3866  http://redstatewatcher.com/aggregate.asp?id=17...  redstatewatcher.com   \n",
+       "3867  http://redstatewatcher.com/aggregate.asp?id=17...  redstatewatcher.com   \n",
+       "\n",
+       "      num_tweets          score site_type  \n",
+       "0          646.0   6.2215809822     claim  \n",
+       "1          468.0   5.9677276611     claim  \n",
+       "2          256.0   6.6697311401     claim  \n",
+       "3           55.0   6.0907196999     claim  \n",
+       "4           47.0   6.6697311401     claim  \n",
+       "...          ...            ...       ...  \n",
+       "3863         0.0   9.1030197144     claim  \n",
+       "3864         0.0    7.439699173     claim  \n",
+       "3865         0.0   6.8410634995     claim  \n",
+       "3866         0.0  50.4958114624     claim  \n",
+       "3867         0.0   6.8410634995     claim  \n",
+       "\n",
+       "[3868 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "article_df = pd.read_csv(article_data_path).drop_duplicates([\"id\"], ignore_index=True)\n",
+    "print(article_df.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### "
+   ]
   }
  ],
  "metadata": {
@@ -161,7 +399,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
