--- a/notebooks/ArticleFeatureCreation.ipynb
+++ b/notebooks/ArticleFeatureCreation.ipynb
@@ -4,7 +4,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Matplotlib is building the font cache; this may take a moment.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -18,16 +26,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['1698377', '1858904', '1804595', '1875818', '2076569', '1698377', '1858904', '1804595', '1988227', '1183733', '1959303', '2168163', '1794041', '1987163', '2014871', '1875759', '1650299', '1925157', '1938411', '2060981', '1060266', '1915386', '1215796']\n",
-      "Total articles: 4245\n",
-      "Total articles: 20\n"
+      "['1060266', '1183733', '1215796', '1557808', '1588084', '1619003', '1858904', '1804595', '1650299', '1686905', '1689504', '1692772', '1694943', '1696026', '1698377', '1708211', '1733855', '1745263', '1765438', '1766714', '1790795', '1797282', '1800908', '1807030', '1822635', '1859267', '1863612', '1872577', '1875759', '1875818', '1876748', '1905027', '1915386', '1925157', '1938411', '1947574', '1959303', '1984555', '1988227', '1989692', '2014871', '2016822', '2017092', '2020148', '2028815', '2030993', '2060981', '2076569', '2074418', '2075712', '2081743', '2085903', '2091826', '2099729', '2113951', '2119374', '2168163', '2140677', '2151850', '2167121']\n",
+      "Total articles: 3552\n",
+      "Total articles: 62\n"
      ]
     },
     {
@@ -63,59 +71,59 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1335</th>\n",
+       "      <th>1080</th>\n",
        "      <td>1060266</td>\n",
        "      <td>Voter Fraud: 670 Ballots Cast in Georgia Preci...</td>\n",
        "      <td>2018-08-07 20:10:15+00:00</td>\n",
        "      <td>https://www.breitbart.com/politics/2018/08/07/...</td>\n",
        "      <td>breitbart.com</td>\n",
        "      <td>4088</td>\n",
-       "      <td>8.340967</td>\n",
+       "      <td>8.241311</td>\n",
        "      <td>claim</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1942</th>\n",
+       "      <th>1081</th>\n",
+       "      <td>1060266</td>\n",
+       "      <td>Voter Fraud: 670 Ballots Cast in Georgia Preci...</td>\n",
+       "      <td>2018-08-07 20:10:15+00:00</td>\n",
+       "      <td>https://www.breitbart.com/big-government/2018/...</td>\n",
+       "      <td>breitbart.com</td>\n",
+       "      <td>4088</td>\n",
+       "      <td>8.241311</td>\n",
+       "      <td>claim</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1625</th>\n",
        "      <td>1183733</td>\n",
        "      <td>GOP-Controlled Wisconsin Legislature Votes To ...</td>\n",
        "      <td>2018-12-04 19:47:21+00:00</td>\n",
        "      <td>https://politics.theonion.com/gop-controlled-w...</td>\n",
        "      <td>theonion.com</td>\n",
        "      <td>6166</td>\n",
-       "      <td>7.999938</td>\n",
+       "      <td>7.897564</td>\n",
        "      <td>claim</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2143</th>\n",
+       "      <th>1799</th>\n",
        "      <td>1215796</td>\n",
        "      <td>The NC Democrats overstated this law’s effect ...</td>\n",
        "      <td>2019-01-07 00:00:00+00:00</td>\n",
        "      <td>https://www.politifact.com/north-carolina/stat...</td>\n",
        "      <td>politifact.com</td>\n",
        "      <td>6</td>\n",
-       "      <td>9.784981</td>\n",
+       "      <td>9.647472</td>\n",
        "      <td>fact_checking</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2645</th>\n",
-       "      <td>1650299</td>\n",
-       "      <td>Pelosi 'Stimulus' Bill Imposes Nationwide 'Bal...</td>\n",
-       "      <td>2020-03-23 23:00:34+00:00</td>\n",
-       "      <td>https://www.breitbart.com/2020-election/2020/0...</td>\n",
+       "      <th>1827</th>\n",
+       "      <td>1557808</td>\n",
+       "      <td>New York Democrats Move to Register Illegal Al...</td>\n",
+       "      <td>2020-01-10 02:28:18+00:00</td>\n",
+       "      <td>https://www.breitbart.com/politics/2020/01/09/...</td>\n",
        "      <td>breitbart.com</td>\n",
-       "      <td>5130</td>\n",
-       "      <td>100.376617</td>\n",
+       "      <td>764</td>\n",
+       "      <td>7.045094</td>\n",
        "      <td>claim</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2746</th>\n",
-       "      <td>1698377</td>\n",
-       "      <td>Trump's Latest Voter Fraud Misinformation</td>\n",
-       "      <td>2020-04-10 19:17:59+00:00</td>\n",
-       "      <td>https://www.factcheck.org/2020/04/trumps-lates...</td>\n",
-       "      <td>factcheck.org</td>\n",
-       "      <td>2769</td>\n",
-       "      <td>9.367697</td>\n",
-       "      <td>fact_checking</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -123,35 +131,35 @@
       ],
       "text/plain": [
        "           id                                              title  \\\n",
-       "1335  1060266  Voter Fraud: 670 Ballots Cast in Georgia Preci...   \n",
-       "1942  1183733  GOP-Controlled Wisconsin Legislature Votes To ...   \n",
-       "2143  1215796  The NC Democrats overstated this law’s effect ...   \n",
-       "2645  1650299  Pelosi 'Stimulus' Bill Imposes Nationwide 'Bal...   \n",
-       "2746  1698377          Trump's Latest Voter Fraud Misinformation   \n",
+       "1080  1060266  Voter Fraud: 670 Ballots Cast in Georgia Preci...   \n",
+       "1081  1060266  Voter Fraud: 670 Ballots Cast in Georgia Preci...   \n",
+       "1625  1183733  GOP-Controlled Wisconsin Legislature Votes To ...   \n",
+       "1799  1215796  The NC Democrats overstated this law’s effect ...   \n",
+       "1827  1557808  New York Democrats Move to Register Illegal Al...   \n",
        "\n",
        "                date_published  \\\n",
-       "1335 2018-08-07 20:10:15+00:00   \n",
-       "1942 2018-12-04 19:47:21+00:00   \n",
-       "2143 2019-01-07 00:00:00+00:00   \n",
-       "2645 2020-03-23 23:00:34+00:00   \n",
-       "2746 2020-04-10 19:17:59+00:00   \n",
+       "1080 2018-08-07 20:10:15+00:00   \n",
+       "1081 2018-08-07 20:10:15+00:00   \n",
+       "1625 2018-12-04 19:47:21+00:00   \n",
+       "1799 2019-01-07 00:00:00+00:00   \n",
+       "1827 2020-01-10 02:28:18+00:00   \n",
        "\n",
        "                                                    url          domain  \\\n",
-       "1335  https://www.breitbart.com/politics/2018/08/07/...   breitbart.com   \n",
-       "1942  https://politics.theonion.com/gop-controlled-w...    theonion.com   \n",
-       "2143  https://www.politifact.com/north-carolina/stat...  politifact.com   \n",
-       "2645  https://www.breitbart.com/2020-election/2020/0...   breitbart.com   \n",
-       "2746  https://www.factcheck.org/2020/04/trumps-lates...   factcheck.org   \n",
+       "1080  https://www.breitbart.com/politics/2018/08/07/...   breitbart.com   \n",
+       "1081  https://www.breitbart.com/big-government/2018/...   breitbart.com   \n",
+       "1625  https://politics.theonion.com/gop-controlled-w...    theonion.com   \n",
+       "1799  https://www.politifact.com/north-carolina/stat...  politifact.com   \n",
+       "1827  https://www.breitbart.com/politics/2020/01/09/...   breitbart.com   \n",
        "\n",
-       "      num_tweets       score      site_type  \n",
-       "1335        4088    8.340967          claim  \n",
-       "1942        6166    7.999938          claim  \n",
-       "2143           6    9.784981  fact_checking  \n",
-       "2645        5130  100.376617          claim  \n",
-       "2746        2769    9.367697  fact_checking  "
+       "      num_tweets     score      site_type  \n",
+       "1080        4088  8.241311          claim  \n",
+       "1081        4088  8.241311          claim  \n",
+       "1625        6166  7.897564          claim  \n",
+       "1799           6  9.647472  fact_checking  \n",
+       "1827         764  7.045094          claim  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,6 +178,181 @@
     "article_df.to_csv(f\"{data_path}/article_features.csv\")\n",
     "print(f\"Total articles: {article_df.shape[0]}\")\n",
     "article_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(43, 12)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>date_published</th>\n",
+       "      <th>url</th>\n",
+       "      <th>domain</th>\n",
+       "      <th>num_tweets</th>\n",
+       "      <th>score</th>\n",
+       "      <th>site_type</th>\n",
+       "      <th>num_peaks</th>\n",
+       "      <th>active_days</th>\n",
+       "      <th>lifespan</th>\n",
+       "      <th>active_ratio</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>1858904</td>\n",
+       "      <td>Trump's Absentee vs. Mail-In Ballot Spin</td>\n",
+       "      <td>2020-06-19 15:02:00+00:00</td>\n",
+       "      <td>https://www.factcheck.org/2020/06/trumps-absen...</td>\n",
+       "      <td>factcheck.org</td>\n",
+       "      <td>2476</td>\n",
+       "      <td>104.872978</td>\n",
+       "      <td>fact_checking</td>\n",
+       "      <td>4</td>\n",
+       "      <td>100</td>\n",
+       "      <td>152</td>\n",
+       "      <td>0.657895</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>1766714</td>\n",
+       "      <td>Database Swells to 1285 Proven Cases of Voter ...</td>\n",
+       "      <td>2020-05-09 04:00:00+00:00</td>\n",
+       "      <td>https://www.dailysignal.com/2020/05/09/databas...</td>\n",
+       "      <td>dailysignal.com</td>\n",
+       "      <td>1223</td>\n",
+       "      <td>22.271851</td>\n",
+       "      <td>claim</td>\n",
+       "      <td>3</td>\n",
+       "      <td>153</td>\n",
+       "      <td>193</td>\n",
+       "      <td>0.792746</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1060266</td>\n",
+       "      <td>Voter Fraud: 670 Ballots Cast in Georgia Preci...</td>\n",
+       "      <td>2018-08-07 20:10:15+00:00</td>\n",
+       "      <td>https://www.breitbart.com/politics/2018/08/07/...</td>\n",
+       "      <td>breitbart.com</td>\n",
+       "      <td>4088</td>\n",
+       "      <td>8.241311</td>\n",
+       "      <td>claim</td>\n",
+       "      <td>3</td>\n",
+       "      <td>116</td>\n",
+       "      <td>824</td>\n",
+       "      <td>0.140777</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>1988227</td>\n",
+       "      <td>How to make sure your ballot is counted this fall</td>\n",
+       "      <td>2020-08-17 04:00:00+00:00</td>\n",
+       "      <td>https://www.politifact.com/article/2020/aug/17...</td>\n",
+       "      <td>politifact.com</td>\n",
+       "      <td>600</td>\n",
+       "      <td>99.220718</td>\n",
+       "      <td>fact_checking</td>\n",
+       "      <td>3</td>\n",
+       "      <td>20</td>\n",
+       "      <td>78</td>\n",
+       "      <td>0.256410</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1619003</td>\n",
+       "      <td>Voter Fraud Ring Caught Rigging Elections for ...</td>\n",
+       "      <td>2020-03-13 13:04:55+00:00</td>\n",
+       "      <td>https://neonnettle.com/news/5336-voter-fraud-r...</td>\n",
+       "      <td>neonnettle.com</td>\n",
+       "      <td>871</td>\n",
+       "      <td>8.469290</td>\n",
+       "      <td>claim</td>\n",
+       "      <td>2</td>\n",
+       "      <td>75</td>\n",
+       "      <td>250</td>\n",
+       "      <td>0.300000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         id                                              title  \\\n",
+       "19  1858904           Trump's Absentee vs. Mail-In Ballot Spin   \n",
+       "12  1766714  Database Swells to 1285 Proven Cases of Voter ...   \n",
+       "0   1060266  Voter Fraud: 670 Ballots Cast in Georgia Preci...   \n",
+       "27  1988227  How to make sure your ballot is counted this fall   \n",
+       "5   1619003  Voter Fraud Ring Caught Rigging Elections for ...   \n",
+       "\n",
+       "               date_published  \\\n",
+       "19  2020-06-19 15:02:00+00:00   \n",
+       "12  2020-05-09 04:00:00+00:00   \n",
+       "0   2018-08-07 20:10:15+00:00   \n",
+       "27  2020-08-17 04:00:00+00:00   \n",
+       "5   2020-03-13 13:04:55+00:00   \n",
+       "\n",
+       "                                                  url           domain  \\\n",
+       "19  https://www.factcheck.org/2020/06/trumps-absen...    factcheck.org   \n",
+       "12  https://www.dailysignal.com/2020/05/09/databas...  dailysignal.com   \n",
+       "0   https://www.breitbart.com/politics/2018/08/07/...    breitbart.com   \n",
+       "27  https://www.politifact.com/article/2020/aug/17...   politifact.com   \n",
+       "5   https://neonnettle.com/news/5336-voter-fraud-r...   neonnettle.com   \n",
+       "\n",
+       "    num_tweets       score      site_type  num_peaks  active_days  lifespan  \\\n",
+       "19        2476  104.872978  fact_checking          4          100       152   \n",
+       "12        1223   22.271851          claim          3          153       193   \n",
+       "0         4088    8.241311          claim          3          116       824   \n",
+       "27         600   99.220718  fact_checking          3           20        78   \n",
+       "5          871    8.469290          claim          2           75       250   \n",
+       "\n",
+       "    active_ratio  \n",
+       "19      0.657895  \n",
+       "12      0.792746  \n",
+       "0       0.140777  \n",
+       "27      0.256410  \n",
+       "5       0.300000  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "article_feature_df = pd.read_csv(f\"{data_path}/article_features.csv\").iloc[:, 1:].drop_duplicates([\"id\"], ignore_index=True)\n",
+    "print(article_feature_df.shape)\n",
+    "article_feature_df.sort_values(\"num_peaks\", ascending=False).head()"
    ]
   },
   {
@@ -196,7 +379,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
