Add average peak distance feature

--- a/notebooks/ArticleFeatureCreation.ipynb
+++ b/notebooks/ArticleFeatureCreation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
        "Name: date_published, Length: 2947, dtype: datetime64[ns, UTC]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -257,7 +257,7 @@
        "10       0.783550  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -298,12 +298,14 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th></th>\n",
        "      <th>lifespan</th>\n",
        "      <th>active_days</th>\n",
        "      <th>active_ratio</th>\n",
        "      <th>id</th>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>which_half</th>\n",
        "      <th>num_peaks</th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -313,39 +315,40 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th rowspan=\"7\" valign=\"top\">1</th>\n",
        "      <th>0</th>\n",
-       "      <td>76.850000</td>\n",
-       "      <td>22.500000</td>\n",
-       "      <td>0.560487</td>\n",
-       "      <td>20</td>\n",
+       "      <td>118.625000</td>\n",
+       "      <td>29.625000</td>\n",
+       "      <td>0.525129</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>47.567227</td>\n",
-       "      <td>11.184874</td>\n",
-       "      <td>0.474611</td>\n",
-       "      <td>238</td>\n",
+       "      <td>78.411111</td>\n",
+       "      <td>14.744444</td>\n",
+       "      <td>0.368670</td>\n",
+       "      <td>90</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>123.611111</td>\n",
-       "      <td>38.888889</td>\n",
-       "      <td>0.400991</td>\n",
-       "      <td>18</td>\n",
+       "      <td>172.090909</td>\n",
+       "      <td>52.181818</td>\n",
+       "      <td>0.311277</td>\n",
+       "      <td>11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>160.500000</td>\n",
-       "      <td>92.250000</td>\n",
-       "      <td>0.558740</td>\n",
-       "      <td>4</td>\n",
+       "      <td>220.500000</td>\n",
+       "      <td>140.000000</td>\n",
+       "      <td>0.645827</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>156.666667</td>\n",
-       "      <td>101.333333</td>\n",
-       "      <td>0.559904</td>\n",
-       "      <td>3</td>\n",
+       "      <td>196.000000</td>\n",
+       "      <td>142.000000</td>\n",
+       "      <td>0.711651</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -361,23 +364,64 @@
        "      <td>0.778947</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">2</th>\n",
+       "      <th>0</th>\n",
+       "      <td>49.000000</td>\n",
+       "      <td>17.750000</td>\n",
+       "      <td>0.584059</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>28.810811</td>\n",
+       "      <td>9.020270</td>\n",
+       "      <td>0.539034</td>\n",
+       "      <td>148</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>47.428571</td>\n",
+       "      <td>18.000000</td>\n",
+       "      <td>0.541972</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>100.500000</td>\n",
+       "      <td>44.500000</td>\n",
+       "      <td>0.471653</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>78.000000</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>0.256410</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             lifespan  active_days  active_ratio   id\n",
-       "num_peaks                                            \n",
-       "0           76.850000    22.500000      0.560487   20\n",
-       "1           47.567227    11.184874      0.474611  238\n",
-       "2          123.611111    38.888889      0.400991   18\n",
-       "3          160.500000    92.250000      0.558740    4\n",
-       "4          156.666667   101.333333      0.559904    3\n",
-       "5          152.000000   118.000000      0.776316    1\n",
-       "7          190.000000   148.000000      0.778947    1"
+       "                        lifespan  active_days  active_ratio   id\n",
+       "which_half num_peaks                                            \n",
+       "1          0          118.625000    29.625000      0.525129    8\n",
+       "           1           78.411111    14.744444      0.368670   90\n",
+       "           2          172.090909    52.181818      0.311277   11\n",
+       "           3          220.500000   140.000000      0.645827    2\n",
+       "           4          196.000000   142.000000      0.711651    2\n",
+       "           5          152.000000   118.000000      0.776316    1\n",
+       "           7          190.000000   148.000000      0.778947    1\n",
+       "2          0           49.000000    17.750000      0.584059   12\n",
+       "           1           28.810811     9.020270      0.539034  148\n",
+       "           2           47.428571    18.000000      0.541972    7\n",
+       "           3          100.500000    44.500000      0.471653    2\n",
+       "           4           78.000000    20.000000      0.256410    1"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +429,7 @@
    "source": [
     "# grouped_df = time_tweet_df.groupby([\"date\", \"type\"]).count()[\"id\"].unstack(\"type\").fillna(0)\n",
     "# grouped_df.plot.bar(title=\"Tweet Volume over Time\", figsize=(12,8), stacked=True);\n",
-    "article_feature_df.groupby([\"num_peaks\"]).agg({\n",
+    "article_feature_df.groupby([\"which_half\", \"num_peaks\"]).agg({\n",
     "    \"lifespan\": \"mean\", \n",
     "    \"active_days\": \"mean\", \n",
     "    \"active_ratio\": \"mean\", \n",
